force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Allowed_Extensions__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Allowed_Extensions__c</fullName>
    <inlineHelpText>Comma separated list of allowed extensions for file upload. Example: txt,jpg,docx</inlineHelpText>
    <label>Allowed Extensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>