force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Data_Provider_Class__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Data_Provider_Class__c</fullName>
    <description>Data Provider class of the Apex Data Source.
Must be global class implementing smartlists.SmartListApexSourceInterface2</description>
    <label>Data Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>