force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Data_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Data_Source_Type__c</fullName>
    <label>Data Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Data Source</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>SOQL without Sharing</fullName>
            </value>
            <value>
                <fullName>SOQL with Sharing</fullName>
                <default>true</default>
                <label>SOQL with Sharing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>