force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Default_Sort_Field__c</fullName>
    <defaultValue>&apos;CreatedDate&apos;</defaultValue>
    <inlineHelpText>Name of the field used for sorting the records</inlineHelpText>
    <label>Default Sort Field (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>