force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Disable_Autoload__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Disable_Autoload__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, no records will be loaded when the list is displayed for the first time. Typically used for search lists where users are expected to enter search criteria to view records.</inlineHelpText>
    <label>Disable Autoload on Initialization</label>
    <type>Checkbox</type>
</CustomField>