force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Disable_Paging__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Disable_Paging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the paging mode is disabled and all the records are loaded when the list is displayed for the first time or a search is made in the Filters panel</inlineHelpText>
    <label>Disable Paging</label>
    <type>Checkbox</type>
</CustomField>