force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Enable_Delete_Record_Action__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Enable_Delete_Record_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Delete record action is displayed if the running user has Delete right on the object.
This property is only considered when Enable all Record Actions is not checked</inlineHelpText>
    <label>Enable Delete Record Action</label>
    <type>Checkbox</type>
</CustomField>