force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Export_to_CSV__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Export_to_CSV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Export to CSV button is displayed</inlineHelpText>
    <label>Export to CSV (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>