force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Export_to_CSV_Add_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Export_to_CSV_Add_Record_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, record ids are added by default to the export</inlineHelpText>
    <label>Export to CSV: Add Record Id</label>
    <type>Checkbox</type>
</CustomField>