force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Export_to_CSV_Display_Button__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Export_to_CSV_Display_Button__c</fullName>
    <label>Export  to CSV: Display Button</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>AllUsers</fullName>
                <label>For all Users</label>
            </value>
            <value>
                <fullName>CustomPermission</fullName>
                <label>For Users with Custom Permission &apos;Export to CSV&apos;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>