force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Filters_Max_Height__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Filters_Max_Height__c</fullName>
    <inlineHelpText>Maximum height of the Filters Panel in pixels. A scrollbar will appear if the panel height exceeds this value.
Leave it blank if you do not wish to limit the height of the Filters Panel.</inlineHelpText>
    <label>Filters Panel Max Height</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>