force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Filters_Panel_Columns__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Filters_Panel_Columns__c</fullName>
    <description>Number of search filters displayed in each row of the Filter Panels.</description>
    <label>Filters Panel Columns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>