force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Hide_Load_All_Button__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Hide_Load_All_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Load All Button</label>
    <type>Checkbox</type>
</CustomField>