force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__List_Icon__c.field-meta.xml
<CustomField>
    <fullName>smartlists__List_Icon__c</fullName>
    <inlineHelpText>Name of a SLDS icon formatted as [icon category in lower case]:[icon name in lower case]. Example: standard:account
https://www.lightningdesignsystem.com/icons/
If empty, Smart Lists will try to determine the icon for the list SObject
Required for Apex Data Sources without SObject.</inlineHelpText>
    <label>List Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>