force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__List_Label__c.field-meta.xml
<CustomField>
    <fullName>smartlists__List_Label__c</fullName>
    <inlineHelpText>Label of the list. If left blank, the list label will be the plural label of the list SObject: Cases for Case.
Required for Apex Data Sources without SObject.
For multi-lingual implementations, you can specify a custom label: $Label­.CustomLabelName</inlineHelpText>
    <label>List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>