force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Max_Row_Selected__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Max_Row_Selected__c</fullName>
    <defaultValue>2000</defaultValue>
    <inlineHelpText>Maximum number of rows that can be selected in the list. Set to 1 if you want users to select 1 row at a time</inlineHelpText>
    <label>Max Row Selected</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>