force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__New_Record_Action_Label__c.field-meta.xml
<CustomField>
    <fullName>smartlists__New_Record_Action_Label__c</fullName>
    <inlineHelpText>Label of the New Record Action. Defaulted to &apos;New&apos; if left blank. Enter a different value if you need another label such as &apos;Add&apos;</inlineHelpText>
    <label>New Record Action Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>