force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Number_of_Records_per_Page__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Number_of_Records_per_Page__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Number of Records per Page</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>