force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Parent_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Parent_Id_Field__c</fullName>
    <inlineHelpText>Field containing the Id of the parent record. Not used in Files lists
Example: For a Cases list on an Account page, AccountId is used for retrieving Cases related to the parent account</inlineHelpText>
    <label>Parent Id Field (Not for Files Lists)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>