force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Parent_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Parent_Key_Field__c</fullName>
    <inlineHelpText>For indirect relationships (parent-child relationships not using the parent record id), API name of the field to be used as the parent key on the parent object.
Example of indirect relationship: Case is the parent object and the list is displaying the Contacts related to the Account of the parent Case record -&gt; Parent Object = Case and Parent Key Field = AccountId</inlineHelpText>
    <label>Indirect Relationship: Parent Key Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>