force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Row_Key__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Row_Key__c</fullName>
    <inlineHelpText>Field for identifying a unique row in the dataset returned by the Apex data source.</inlineHelpText>
    <label>Row Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>