force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Row_Number_Start__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Row_Number_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>First number of the rows counter</inlineHelpText>
    <label>Row Number Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>