force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Selectable_Rows__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Selectable_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, users can select rows in the list</inlineHelpText>
    <label>Selectable Rows</label>
    <type>Checkbox</type>
</CustomField>