force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Show_List_Header__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Show_List_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Table Header</label>
    <type>Checkbox</type>
</CustomField>