force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Show_Row_Number_Column__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Show_Row_Number_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the row numbers are shown in the first column</inlineHelpText>
    <label>Show Row Number Column</label>
    <type>Checkbox</type>
</CustomField>