force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Show_SOSL_Search_in_Quick_Filter__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Show_SOSL_Search_in_Quick_Filter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Display the SOSL Search in the Filters widget.
Can only be selected if the visibility filter My Team is not selected</inlineHelpText>
    <label>Show SOSL Search in Filters (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>