force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SLDS2__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SLDS2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLDS2</label>
    <type>Checkbox</type>
</CustomField>