force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SObject__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SObject__c</fullName>
    <inlineHelpText>For SOQL with/with Sharing datasource, base SObject of the list
For Apex datasource, SObject used for New, Edit and Delete</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>