force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SOQL_Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SOQL_Filter_Type__c</fullName>
    <label>SOQL Filter Type (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>My</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>