force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SOQL_Scope_All__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SOQL_Scope_All__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Returns all records visible by the running user</inlineHelpText>
    <label>Visibility Filter - All</label>
    <type>Checkbox</type>
</CustomField>