force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SOQL_Scope_My__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SOQL_Scope_My__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Returns records owned by the running user</inlineHelpText>
    <label>Visibility Filter - My</label>
    <type>Checkbox</type>
</CustomField>