force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__SOQL_Scope_My_Team__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SOQL_Scope_My_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Returns records owned by the running user or his subordinates in the role hierarchy. Make sure this scope is supported for the object (Equivalent of My Team filter in report). Cannot be selected if Show SOSL Search in Quick Filter is checked</inlineHelpText>
    <label>Visibility Filter - My Team</label>
    <type>Checkbox</type>
</CustomField>