force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Table_Height__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Table_Height__c</fullName>
    <inlineHelpText>If set, defined the height of the table in pixels. If not set, the height is automatically calculated based on the value of Number of Records per Page</inlineHelpText>
    <label>Table Height in Pixels</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>