force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Tile_Layout__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Tile_Layout__c</fullName>
    <inlineHelpText>Select tile layout: number of tiles per row x number of colums per tile.
As an example, 2x2 means 2 tiles per row of the widget x 2 field colum per tile</inlineHelpText>
    <label>Tile Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1x1</fullName>
            </value>
            <value>
                <fullName>1x2</fullName>
            </value>
            <value>
                <fullName>1x3</fullName>
            </value>
            <value>
                <fullName>2x1</fullName>
            </value>
            <value>
                <fullName>2x2</fullName>
            </value>
            <value>
                <fullName>3x1</fullName>
                <default>true</default>
                <label>3x1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>