force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/fields/smartlists__Wrap_Text_Max_Lines__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Wrap_Text_Max_Lines__c</fullName>
    <inlineHelpText>Maximum number of text lines displayed in a cell when Wrap Text is enabled on a column</inlineHelpText>
    <label>Wrap Text Max Lines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>