force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Data_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Data_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(smartlists__Data_Source_Type__c, &quot;Apex Data Source&quot;) &amp;&amp;
ISBLANK(smartlists__Data_Provider_Class__c)</errorConditionFormula>
    <errorDisplayField>smartlists__Data_Provider_Class__c</errorDisplayField>
    <errorMessage>Data Provider Class is required for type &apos;	Apex Data Source&apos;</errorMessage>
</ValidationRule>