force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Default_Scope.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Default_Scope</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(smartlists__SOQL_Default_Scope__c, &apos;everything&apos;) &amp;&amp; ! smartlists__SOQL_Scope_All__c) || (ISPICKVAL(smartlists__SOQL_Default_Scope__c, &apos;mine&apos;) &amp;&amp; ! smartlists__SOQL_Scope_My__c) || (ISPICKVAL(smartlists__SOQL_Default_Scope__c, &apos;team&apos;) &amp;&amp; ! smartlists__SOQL_Scope_My_Team__c) || (ISPICKVAL(smartlists__SOQL_Default_Scope__c, &apos;subordinates&apos;) &amp;&amp; ! smartlists__SOQL_Scope_My_Subordinates__c )</errorConditionFormula>
    <errorDisplayField>smartlists__SOQL_Default_Scope__c</errorDisplayField>
    <errorMessage>The default filter is not one of the selected filters</errorMessage>
</ValidationRule>