force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Enable_CRUD_Actions.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Enable_CRUD_Actions</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(smartlists__Data_Source_Type__c, &quot;Files&quot;) &amp;&amp; (smartlists__Enable_CRUD_Actions__c ||  smartlists__Enable_Delete_Record_Action__c ||  smartlists__Enable_Edit_Record_Action__c ||  smartlists__Enable_New_Record_Action__c)</errorConditionFormula>
    <errorDisplayField>smartlists__Enable_CRUD_Actions__c</errorDisplayField>
    <errorMessage>Record actions cannot be enabled for Files Lists</errorMessage>
</ValidationRule>