force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Indirect_Relationship_FILES.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Indirect_Relationship_FILES</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>smartlists__Parent_Object__c</errorDisplayField>
    <errorMessage>Files datasource: Parent Object, Parent Key Field and Parent Id are required for an indirect relationship</errorMessage>
</ValidationRule>