force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Indirect_Relationship_SOQL_APEX.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Indirect_Relationship_SOQL_APEX</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(smartlists__Data_Source_Type__c, &quot;Apex Data Source&quot;) || ISPICKVAL(smartlists__Data_Source_Type__c , &quot;SOQL with Sharing&quot;) ||ISPICKVAL(smartlists__Data_Source_Type__c , &quot;SOQL without Sharing&quot;)) &amp;&amp; 
 !ISBLANK( smartlists__Parent_Key_Field__c ) &amp;&amp; ISBLANK( smartlists__Parent_Id_Field__c )</errorConditionFormula>
    <errorDisplayField>smartlists__Parent_Id_Field__c</errorDisplayField>
    <errorMessage>SOQL or APEX Data Source: Parent Key Field and Parent Id are required for an indirect relationship</errorMessage>
</ValidationRule>