force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Layout_For_Tiles.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Layout_For_Tiles</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( smartlists__Display_Mode__c , &apos;Tiles&apos;) &amp;&amp;  ISPICKVAL( smartlists__Tile_Layout__c, &apos;&apos; )</errorConditionFormula>
    <errorDisplayField>smartlists__Tile_Layout__c</errorDisplayField>
    <errorMessage>Tile Layout is required when Display Mode is Tiles</errorMessage>
</ValidationRule>