force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_List_Icon_APEX.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_List_Icon_APEX</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(smartlists__Data_Source_Type__c, &quot;Apex Data Source&quot;) &amp;&amp; 
ISBLANK(  smartlists__SObject__c ) &amp;&amp; ISBLANK(   smartlists__List_Icon__c   )</errorConditionFormula>
    <errorDisplayField>smartlists__List_Icon__c</errorDisplayField>
    <errorMessage>List Icon is required for APEX Data Source without SObject</errorMessage>
</ValidationRule>