force-app/main/default/objects/smartlists__Smart_List_Definition__mdt/validationRules/smartlists__Check_Parent_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Parent_Field</fullName>
    <active>true</active>
    <description>Obsolete</description>
    <errorConditionFormula>ISPICKVAL(smartlists__Data_Source_Type__c, &quot;Apex Data Source with Parent&quot;) &amp;&amp;
 ISBLANK( smartlists__Parent_Id_Field__c )</errorConditionFormula>
    <errorDisplayField>smartlists__Parent_Id_Field__c</errorDisplayField>
    <errorMessage>Parent Id Field is required for Apex Data Source with Parent</errorMessage>
</ValidationRule>